--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,7 @@
       "fileFormat": "json",
       "managerFilePatterns": ["multitool.lock.json"],
       "matchStrings": [
-        "$map(*.binaries, function($v) { { 'packageName': $join($split($v.url, '/')[[3, 4]], '/'), 'currentValue': $split($v.url, '/')[7], 'currentDigest': $v.sha256 } })"
+        "$map(*.binaries, function($v) { { 'depName': $join($split($v.url, '/')[[3, 4, 8]], '/'), 'packageName': $join($split($v.url, '/')[[3, 4]], '/'), 'currentValue': $split($v.url, '/')[7], 'currentDigest': $v.sha256 } })"
       ],
       "datasourceTemplate": "github-release-attachments"
     }
